--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "@vercel/blob": "^2.0.0",
+    "@vercel/kv": "^3.0.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
     "react": "19.2.3",
